Replace fabricated SHAFT logo with official brand logo in IntelliJ plugin
Replace 6 fake placeholder SVG logo files with official brand assets:
- pluginIcon.svg and pluginIcon_dark.svg now embed the full-color shaft.png
- shaftToolWindow.svg and @20x20.svg variants embed shaft_standard.png (light)
- shaftToolWindow_dark.svg and @20x20_dark.svg embed shaft_white.png (dark)

Each SVG now embeds its canonical PNG as a base64 data URI, making the
visual brand consistent with the project's public documentation.

Rewrite ShaftIconAssetsTest to enforce brand fidelity via byte-identity
verification: instead of checking for fake design markers (data-shaft-logo
attribute and #9A6A00 color), the test now decodes the base64 PNG payload
from each SVG and verifies it matches the canonical source PNG bytes exactly.
This prevents future silent logo degradation.

All tests pass: 4/4 (actionIcons, toolWindowIcons, marketplaceLogos, descriptor).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>